2026/ecs-begginer-book/chap5/vpc_endpoint.tf
resource "aws_vpc_endpoint" "ecr_api" {
  vpc_id              = aws_vpc.main.id
  service_name        = "com.amazonaws.ap-northeast-1.ecr.api"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true

  subnet_ids = module.subnet_pair_egress.ids

  security_group_ids = [
    aws_security_group.egress_vpce.id,
  ]

  tags = {
    Name = "sbcntr-ecr-api"
  }
}

resource "aws_vpc_endpoint" "ecr_dkr" {
  vpc_id              = aws_vpc.main.id
  service_name        = "com.amazonaws.ap-northeast-1.ecr.dkr"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true

  subnet_ids = module.subnet_pair_egress.ids

  security_group_ids = [
    aws_security_group.egress_vpce.id,
  ]

  tags = {
    Name = "sbcntr-ecr-dkr"
  }
}

resource "aws_vpc_endpoint" "logs" {
  vpc_id              = aws_vpc.main.id
  service_name        = "com.amazonaws.ap-northeast-1.logs"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true

  subnet_ids = module.subnet_pair_egress.ids

  security_group_ids = [
    aws_security_group.egress_vpce.id,
  ]

  tags = {
    Name = "sbcntr-logs"
  }
}

resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.main.id
  service_name      = "com.amazonaws.ap-northeast-1.s3"
  vpc_endpoint_type = "Gateway"

  route_table_ids = [
    aws_route_table.app.id
  ]

  tags = {
    Name = "sbcntr-s3"
  }
}

resource "aws_vpc_endpoint" "secretsmanager" {
  vpc_id              = aws_vpc.main.id
  service_name        = "com.amazonaws.ap-northeast-1.secretsmanager"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true

  subnet_ids = module.subnet_pair_egress.ids

  security_group_ids = [
    aws_security_group.egress_vpce.id,
  ]

  tags = {
    Name = "sbcntr-secrets-manager"
  }
}
